@@ -1,0 +1,3 @@
+# -*- coding: utf-8 -*-
+
+master_doc = 'index'
